test-cases/type_error.exp
Error detected during type checking of module(s) type_error
[91mtest-cases/type_error.wybe:1:31: Type error in call to *, argument 2
[0m[91mtest-cases/type_error.wybe:1:31: Type error in call to *, argument 1
[0m