test-cases/type_error.wybe
func messup(x:int, y:float) = x * y
